실비아 커밋

--- a/freshshop-master/css/superslides.css
+++ b/freshshop-master/css/superslides.css
@@ -1,29 +1,9 @@
-#slides {
-  position: relative;
-}
-#slides .slides-container {
-  display: none;
-}
-#slides .scrollable {
-  *zoom: 1;
-  position: relative;
-  top: 0;
-  left: 0;
-  overflow-y: auto;
-  -webkit-overflow-scrolling: touch;
-  height: 100%;
-}
-#slides .scrollable:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
 .slides-navigation {
+  /* 슬라이드 버튼 위치 */
   margin: 0 auto;
   position: absolute;
   z-index: 3;
-  top: 46%;
+  top: 60%;
   width: 100%;
 }
 .slides-navigation a {
