--- a/freshshop-master_1차/css/hospital-search.css
+++ b/freshshop-master_1차/css/hospital-search.css
@@ -240,9 +240,10 @@
     opacity: 1;
   }
 }
+/* 여기에 오류가 있어서 line 243부터 line 249까지 주석처리...
 =======
     text-align: center;
     width:700px; 
     height:400px;
 }
-
+*/
