일반병원맵, 검색기능완료

--- a/PawMap/src/main/resources/static/css/custom-jaeseok.css
+++ b/PawMap/src/main/resources/static/css/custom-jaeseok.css
@@ -30,6 +30,7 @@
 .search:hover > .search_icon {
   background: red;
   color: #fff;
+  
 }
 
 .search_icon {
@@ -40,8 +41,10 @@
   justify-content: center;
   align-items: center;
   border-radius: 50%;
-  color: white;
+  color: #e1a963;
   background-color: black;
+  border : none;
+  transition : all 0.2s linear;
 }
 
 a:link {
