--- a/PawMap/src/main/resources/static/css/custom-silbia.css
+++ b/PawMap/src/main/resources/static/css/custom-silbia.css
@@ -43,6 +43,7 @@
 .pet-account-box {
     /* 마이페이지 카드 간격 */
     margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 /* 마이페이지 카드 아이콘 크기 */
@@ -145,5 +146,28 @@
     border: 1px solid #5c3a08;
 }
 
+
+/* 회원가입 form style */
+  .user-form-label {
+    color: #e1a963;
+  }
+  .user-join-btn {
+    background: gray;
+    border-color: antiquewhite;
+  }
+  .user-left-div {
+    background-color: #ffdab9;
+    border-radius: 50% 20% / 10% 40%;
+  }
+  .user-column-div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80px;
+    height: 50px;
+    background-color: antiquewhite;
+    border-radius: 100px;
+    margin: auto;
+  }
 
 
