Dec 1st at 8:37pm, jaeskaaa requested to identify and modify any duplicated css class name. this is the revised version of jsp and css file.

--- a/freshshop-master_1차/css/style-gyul.css
+++ b/freshshop-master_1차/css/style-gyul.css
@@ -52,7 +52,7 @@ box-sizing: border-box;
 
 /* board-free.html 관련 스타일 */
 
-.cover-slides{
+.cover-slides-free-board{
     border-radius: 25px;
     border: 1px solid rgba(204, 156, 22, 0.8);
 }
@@ -62,7 +62,7 @@ box-sizing: border-box;
 #slides-shop{
     height: 200px;
 }
-.text-center{
+p.text-center{
     width: 100px;
 }
 .btn-next, .btn-prev{
