--- a/freshshop-master_1차/css/custom-tom.css
+++ b/freshshop-master_1차/css/custom-tom.css
@@ -390,3 +390,9 @@
 * adminpage2vetmanage-tom 끝.
 */
 
+/*
+* Dec 3rd, adminindex page에 있는 row class modifier..  기존 div class="row"에다가 justify-content 을 center로 처리하고자 하기와 같이 클래스를 만듬.
+*/
+.row-adminindex {
+    justify-content: center
+}
