--- a/PawMap/src/main/resources/static/css/custom-tom.css
+++ b/PawMap/src/main/resources/static/css/custom-tom.css
@@ -85,7 +85,7 @@
 }
 
 .main-search-input-wrap {
-    max-width: 500px;
+    max-width: 700px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 20px;
@@ -396,3 +396,16 @@
 .row-adminindex {
     justify-content: center
 }
+
+/*
+* dec 7th
+*/
+
+.main-search-input-select {
+    background: #fff;
+    padding: 0 20px 0 0;
+    border-radius: 1px;
+    margin-top: 20px;
+    box-shadow: 0px 0px 0px 6px rgba(255, 255, 255, 0.3)
+}
+
