--- a/PawMap/src/main/resources/static/css/style-gyul.css
+++ b/PawMap/src/main/resources/static/css/style-gyul.css
@@ -65,7 +65,7 @@
     
     .cover-slides{
         border-radius: 25px;
-        border: 1px solid rgba(204, 156, 22, 0.8);
+        border: 1px solid #f5c571;
     }
     
       /* demo styles */
@@ -82,7 +82,7 @@
         background-color: aliceblue;
     }
     .line-paint{
-        border: thin solid rgb(209, 154, 34);
+        border: thin solid #f5c571;
         margin-top: 50px;
         margin-bottom: 70px;
         width: 80%;
@@ -92,7 +92,7 @@
         margin-left: 10%;
     }
     .board-type > h1 {
-        color: rgb(209, 154, 34);
+        color: #f5c571;
         font-size: 40px;
     }
     .board-table{
@@ -102,7 +102,7 @@
     
       
       .tbl-header{
-        background-color: rgba(204, 156, 22, 0.8);
+        background-color: #f5c571;
        }
       .tbl-content{
         height:600px;
@@ -114,7 +114,7 @@
         padding: 20px 15px;
         text-align: left;
         font-weight: 500;
-        font-size: 12px;
+        font-size: 14px;
         color: rgb(29, 25, 25);
         text-transform: uppercase;
       }
@@ -123,13 +123,26 @@
         text-align: left;
         vertical-align:middle;
         font-weight: 300;
-        font-size: 12px;
+        font-size: 14px;
         color: rgb(29, 25, 25);
         border-bottom: solid 1px rgba(255,255,255,0.1);
         word-wrap: break-word;
       }
       
-      
+      #free_button {
+        color: #fff;
+        background: none;
+        border-radius: 25px;
+        border-style: 1px solid white;
+        font-size: 15px;
+        height: 25px; 
+        padding: 5px;
+    }
+    #free_button:hover {
+        background-color: rgba(228, 188, 96, 0.363);
+        color: #fff !important;
+        border-style: solid #f7ba61;
+    }
       /* demo styles */
       
       @import url(https://fonts.googleapis.com/css?family=Roboto:400,500,300,700);
@@ -156,8 +169,9 @@
           margin: 4%;
       }
       .page-link{
-        background-color: rgba(204, 156, 22, 0.8);
+        background-color: rgb(238 198 120 / 55%);
         color: white;
+        border: none;
       }
     
       /* 서치바 관련 스타일*/
